Game client notebook

--- a/game_client.ipynb
+++ b/game_client.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "server_url = 'localhost:5000' #'https://euclid-echo-homer-1.herokuapp.com'"
+    "server_url = 'https://euclid-echo-homer-1.herokuapp.com'"
    ]
   },
   {
