--- a/game_client.ipynb
+++ b/game_client.ipynb
@@ -35,8 +35,8 @@
     "    Inputs\n",
     "    ------\n",
     "    path:      API endpoint (as per game help) without leading slash [string] e.g. 'move/50.1/1.6'\n",
-    "    id_code:   unique drone_id needed for all drone-specific commands [string]\n",
-    "    is_post:   [bool, default False] only needed when posting form parameters for drone ID setup\n",
+    "    id_code:   unique andro_id needed for all andro-specific commands [string]\n",
+    "    is_post:   [bool, default False] only needed when posting form parameters for andro ID setup\n",
     "    is_cli:    [bool, default True] tells the server to return JSON confirmations in cases that\n",
     "                 it would otherwise render HTML\n",
     "    **kwargs:  other keyword arguments to pass either as regular parameters (is_post=False) or\n",
@@ -68,9 +68,9 @@
     "    info = call('make_session', is_post=True, name=name)\n",
     "    try:\n",
     "        assert info['success']\n",
-    "        return info['drone_id']\n",
+    "        return info['andro_id']\n",
     "    except:\n",
-    "        print(info)"
+    "        print(\"Problem: \" + str(info))"
    ]
   },
   {
@@ -79,14 +79,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def radar_scan(drone_id, bearing):\n",
-    "    return call(\"radar/{}\".format(bearing), id_code=drone_id)\n",
+    "def radar_scan(andro_id, bearing):\n",
+    "    return call(\"radar/{}\".format(bearing), id_code=andro_id)\n",
     "\n",
-    "def full_scan(drone_id):\n",
+    "def full_scan(andro_id):\n",
     "    data_dict = {}\n",
     "    # single scans are 30 degree arcs\n",
     "    for bearing in np.linspace(0, 360, int(360/30)+1)[:-1]:\n",
-    "        data_dict.update(radar_scan(drone_id, bearing)['data'])     \n",
+    "        data_dict.update(radar_scan(andro_id, bearing)['data'])     \n",
     "    radar_pts = []\n",
     "    for bearing, res in data_dict.items():\n",
     "        radar_pts.extend([(dist*np.cos((90-float(bearing))*math.pi/180),\n",
@@ -101,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "drone_id1 = make_player(\"Fry\")"
+    "andro_id1 = make_player(\"Fry\")"
    ]
   },
   {
@@ -112,7 +112,7 @@
    },
    "outputs": [],
    "source": [
-    "drone_id2 = make_player(\"Laurie\")"
+    "andro_id2 = make_player(\"Laurie\")"
    ]
   },
   {
@@ -132,7 +132,7 @@
     }
    ],
    "source": [
-    "drone_id1, drone_id2"
+    "andro_id1, andro_id2"
    ]
   },
   {
@@ -163,7 +163,7 @@
     }
    ],
    "source": [
-    "call('help', id=drone_id1)"
+    "call('help', id=andro_id1)"
    ]
   },
   {
@@ -183,7 +183,7 @@
     }
    ],
    "source": [
-    "call('help/radar', id=drone_id1)"
+    "call('help/radar', id=andro_id1)"
    ]
   },
   {
@@ -208,7 +208,7 @@
     }
    ],
    "source": [
-    "call('status', id_code=drone_id1)"
+    "call('status', id_code=andro_id1)"
    ]
   },
   {
@@ -231,7 +231,7 @@
     }
    ],
    "source": [
-    "call('see', id_code=drone_id1)"
+    "call('see', id_code=andro_id1)"
    ]
   },
   {
@@ -251,7 +251,7 @@
     }
    ],
    "source": [
-    "call('move/180/2', id_code=drone_id1)"
+    "call('move/180/2', id_code=andro_id1)"
    ]
   },
   {
@@ -271,7 +271,7 @@
     }
    ],
    "source": [
-    "call(\"speak/9/how are you today? i want to talk about solving this centroid problem!\", id_code=drone_id1)"
+    "call(\"speak/9/how are you today? i want to talk about solving this centroid problem!\", id_code=andro_id1)"
    ]
   },
   {
@@ -291,7 +291,7 @@
     }
    ],
    "source": [
-    "call(\"memory/speech\", id_code=drone_id2)"
+    "call(\"memory/speech\", id_code=andro_id1)"
    ]
   },
   {
@@ -341,7 +341,7 @@
     }
    ],
    "source": [
-    "radar_scan(drone_id1, 60)"
+    "radar_scan(andro_id1, 60)"
    ]
   },
   {
@@ -350,7 +350,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "radar_pts, data_dict = full_scan(drone_id1)\n",
+    "radar_pts, data_dict = full_scan(andro_id1)\n",
     "radar_xs, radar_ys, signals = list(zip(*radar_pts))"
    ]
   },
@@ -415,27 +415,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'extract': 'Failed because drone not at centroid exit marker',\n",
-       " 'success': False}"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "call('extract', id_code=drone_id1)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [
@@ -451,7 +430,7 @@
     }
    ],
    "source": [
-    "call('refuel/E379J8', id_code=drone_id1)"
+    "call('refuel/E379J8', id_code=andro_id1)"
    ]
   },
   {
